Fixed [Documents] Alignment issue on a Country Documents tab #1240 and heigth in city/club/region followers,members,admins cards

--- a/src/pages/Club/Club/Club.less
+++ b/src/pages/Club/Club/Club.less
@@ -172,10 +172,10 @@ h4.ant-typography {
         margin: 15px;
         width: 242px;
         text-align: center;
-
         
         .detailsMeta {
             margin-top: 10px;
+            height: 45px;
             
             .ant-card-meta-title {
                 white-space: normal;
